Configure food partial form and update new and edit views

--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Foods#edit</h1>
-<p>Find me in app/views/foods/edit.html.erb</p>
+<h1>Edit Food Item</h1>
+
+<%= render 'form' %>
+
+<%= link_to "Back to Food Info", food_path(@food) %>
