--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Foods#show</h1>
-<p>Find me in app/views/foods/show.html.erb</p>
+<h1><%= @food.name %></h1>
+
+<%= render @food %>
+
+<%= link_to "Edit", edit_food_path(@food) %>
