Change food attribute category to categories

--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -6,6 +6,6 @@
     Carbohydrtates: <%= food.carbohydrate %><br>
     Protein: <%= food.protein %><br>
     Fat: <%= food.fat %><br>
-    Categories: <%= food.category %>
+    Categories: <%= food.categories %>
   </p>
 </li>
