--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.number_field :fat %>
   </div>
   <div class="field">
-    <%= f.label :category %>
-    <%= f.text_field :category %>
+    <%= f.label :categories %>
+    <%= f.text_field :categories %>
   </div>
   <div class="actions">
     <%= f.submit %>
