Link to food path

--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <h3><%= food.name %></h3>
+  <h3><%= link_to food.name, food_path(food) %></h3>
   <p>
     Per 100 grams <br>
     Calories: <%= food.calories %><br>
