--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <%= link_to "Home", root_url %>
       <%= link_to "Food", foods_path %>
       <%= link_to "Add food item", new_food_path %>
+      <%= link_to "Lists", lists_path %>
     </nav>
 
     <%= yield %>
